Sigil v0.4.0 ß3 ADD_DATE
    - fixed a rare issue with loading epub files with OPF's that had the XML version set to 1.1,
    but also had other attributes in the XML declaration (issue #812)
    - fixed an issue with entries appearing at random in the TOC after a split on SGF markers
    is followed up with "Generate TOC from headings" request (issue #804)
    - fixed an issue with files not appearing in the Book Browser after a split on SGF markers
    (issue #816)
    - fixed a regression that caused the auto-cover-setting heuristics to unset covers when they
    are already set (issue #806)
    - opening an HTML file now automatically builds a TOC from the headings
    - fixed a regression that caused the Add Semantics menu to stop working (issue #807)

Sigil v0.4.0 ß2 2011.03.21.
    - fixed an issue with the ID of the manifest item of a resource not being updated when the 
    resource was renamed
    - fixed an issue with chapter splits being created in the wrong reading order (issue #797)
    - fixed an issue with some HTML files disappearing after a save/load cycle if chapter splitting
    was performed before the save
    - fixed an issue with renaming a file and then splitting it causing duplicate ID's in the OPF
    manifest (issue #800)
    - fixed a validation issue with the Meta Editor not adding the correct namespace prefix to some
    Dublin Core metadata element attributes

Sigil v0.4.0 ß1 2011.03.20
    - fixed an issue with CSS @import rules in the '@import "something.css"' format not being 
    recognized and thus not updated on import
    - removed the "CustomID" basic metadata entry from the Meta Editor; those wishing to use
    custom ID's can now add them directly to the OPF
    - Sigil now preserves custom unique identifiers in the OPF (issue #552)
    - removed support for the Sigil-proprietary SGF format
    - the user can now edit the OPF file by hand (issue #281) 
    - the user can now edit the NCX file by hand (issue #282)